--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Trivia App</string>
+    <string name="answer">Answer :</string>
+    <string name="hello">Hello :</string>
+    <string name="name">Name :</string>
+    <string name="sachin_tendulkar">Sachin Tendulkar</string>
+    <string name="virat_kohli">Virat Kohli</string>
+    <string name="adam_gilchrist">Adam Gilchrist</string>
+    <string name="jacques_kallis">Jacques Kallis</string>
+    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world ?</string>
+    <string name="next">Next</string>
+    <string name="white">White</string>
+    <string name="yellow">Yellow</string>
+    <string name="orange">Orange</string>
+    <string name="green">Green</string>
 </resources>
